<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.samirvega.formularioderegistro.MainActivity"
    android:orientation="vertical"
    android:background="@color/mario01">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="@string/Nombre"/>
        <EditText
            android:textSize="15sp"
            android:id="@+id/idNombreIn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="@string/contrasena"/>
        <EditText
            android:textSize="15sp"
            android:id="@+id/idContrasena1In"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="Repetir contraseña:"/>
        <EditText
            android:textSize="15sp"
            android:id="@+id/idContrasena2In"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="Correo electronico:"/>
        <EditText
            android:textSize="15sp"
            android:id="@+id/idCorreoIn"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"/>
    </LinearLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <RadioButton
            android:textSize="15sp"
            android:id="@+id/idSexo1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/masculino"
            android:onClick="clickRadio"/>
        <RadioButton
            android:textSize="15sp"
            android:id="@+id/idSexo2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/femenino"
            android:onClick="clickRadio"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:textSize="15sp"
            android:id="@+id/idFecha"
            android:hint="Click para ingresar fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ciudad"/>
        <Spinner
            android:textSize="15sp"
            android:id="@+id/idSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </Spinner>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pasatiempos"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <CheckBox
            android:textSize="15sp"
            android:id="@+id/IdGusto1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cine"
            android:onClick="clickBox"/>
        <CheckBox
            android:textSize="15sp"
            android:id="@+id/IdGusto2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/leer"
            android:onClick="clickBox"/>
        <CheckBox
            android:textSize="15sp"
            android:id="@+id/IdGusto3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TV"
            android:onClick="clickBox"/>
        <CheckBox
            android:textSize="15sp"
            android:id="@+id/IdGusto4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pasear"
            android:onClick="clickBox"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:background="@color/colorAccent"
            android:id="@+id/idBoton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ENVIAR"
            android:onClick="clickEnviar"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5">
        <TextView
            android:id="@+id/resultados"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>
